--- a/src/index.less
+++ b/src/index.less
@@ -7,8 +7,8 @@
 @black-light: fadeout(@black, 40%);
 @white: white;
 @gray: #eee;
-@font-family: 'Trebuchet MS', 'kai';//'Consolas', 'monospace', 'Microsoft YaHei';
-@font-family2: 'Trebuchet MS', 'kai';//'Consolas', 'monospace', 'Microsoft YaHei';
+@font-family: 'Trebuchet MS', '楷书';//'Consolas', 'monospace', 'Microsoft YaHei';
+@font-family2: 'Trebuchet MS', '楷书';//'Consolas', 'monospace', 'Microsoft YaHei';
 @radius: 4px;
 
 body {
